--- a/X-tend_Realty/main.css
+++ b/X-tend_Realty/main.css
@@ -1,5 +1,11 @@
 @charset "UTF-8";
 /*=============================================>>>>>
+			VARIABLES & CHANGES TO BOOTSTRAP
+===============================================>>>>>*/
+/*=============================================>>>>>
+					VARIABLES
+===============================================>>>>>*/
+/*=============================================>>>>>
 					BOOTSTRAP
 ===============================================>>>>>*/
 /*!
@@ -35,7 +41,7 @@
   --breakpoint-md: 768px;
   --breakpoint-lg: 992px;
   --breakpoint-xl: 1200px;
-  --font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  --font-family-sans-serif: "lato", sans-serif;
   --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
@@ -63,7 +69,7 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-family: "lato", sans-serif;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
@@ -4878,7 +4884,7 @@ button.close {
   z-index: 1070;
   display: block;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-family: "lato", sans-serif;
   font-style: normal;
   font-weight: 400;
   line-height: 1.5;
@@ -4980,7 +4986,7 @@ button.close {
   z-index: 1060;
   display: block;
   max-width: 276px;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-family: "lato", sans-serif;
   font-style: normal;
   font-weight: 400;
   line-height: 1.5;
@@ -8570,61 +8576,108 @@ h3 {
   }
 }
 /*=============================================>>>>>
-					VARIABLES
-===============================================>>>>>*/
-/*=============================================>>>>>
-					TYPOGRAPHY
-===============================================>>>>>*/
-body {
-  font-family: "lato", sans-serif;
-  font-weight: 400;
-  line-height: 1.7;
-  color: #323232;
-}
-
-/*=============================================>>>>>
 				SASS FILE IMPORTS
 ===============================================>>>>>*/
+.agent {
+  width: 100%;
+  height: 22.625rem;
+  background-color: #eeeeee;
+}
+
 .header {
   padding: 1rem 1rem 0 1rem;
-}
-
-.svg {
-  width: 1rem;
-  height: 1rem;
-}
-.svg, .svg:link, .svg:visited {
-  border: none;
-  cursor: pointer;
-}
-.svg__contact {
-  display: block;
-  width: 100px;
-  height: 82px;
-  background: url("assets/SVGs/contact.svg");
-  background-size: 1rem 1rem;
-}
-
-.navigation__icon {
-  display: block;
-  text-align: center;
-  margin: 1rem;
-}
-.navigation__icon--text {
-  color: #595959;
-}
-.navigation__text {
-  text-transform: uppercase;
-  color: #323232;
-}
-.navigation__list {
-  display: block;
 }
 
 .quick-search {
   background-color: #aaaaaa;
   width: 100%;
   height: 3.8125rem;
+  box-shadow: 0px 1px 1px #eeeeee;
+}
+.quick-search__text {
+  text-transform: uppercase;
+  color: #eeeeee;
+  font-weight: 700;
+  margin-right: 4rem;
+}
+.quick-search__text:link, .quick-search__text:visited {
+  color: #eeeeee;
+}
+.quick-search__text:hover, .quick-search__text:active {
+  color: #eeeeee;
+}
+.quick-search__link:link, .quick-search__link:visited {
+  color: #eeeeee;
+  text-decoration: none;
+  text-transform: uppercase;
+  display: inline-block;
+}
+.quick-search__link:hover, .quick-search__link:active {
+  color: #eeeeee;
+}
+.quick-search__btn {
+  border-radious: 0;
+  font-weight: 700;
+  color: #eeeeee;
+  background-color: #237377;
+  width: 10.375rem;
+  height: 2.56rem;
+}
+.quick-search__search {
+  width: 16.5rem;
+  height: 2.56rem;
+  margin-right: 2rem;
+}
+.quick-search__search::placeholder {
+  font-size: 0.875rem;
+}
+
+.navigation {
+  margin: 0 2rem 0.3125rem 0;
+}
+.navigation__icon {
+  display: block;
+  text-align: center;
+  margin: 0.625rem 1rem;
+}
+.navigation__icon--link:link, .navigation__icon--link:visited {
+  color: #323232;
+  text-decoration: none;
+}
+.navigation__icon--link:hover, .navigation__icon--link:active {
+  color: #323232;
+  text-decoration: none;
+}
+.navigation__icon--text {
+  color: #595959;
+  font-size: 0.875rem;
+  margin-bottom: 0;
+}
+.navigation__logo--main {
+  width: auto;
+  height: 80px;
+  margin-left: 2rem;
+}
+.navigation__text {
+  text-transform: uppercase;
+  color: #323232;
+  font-weight: 700;
+}
+.navigation__text:not(:last-child) {
+  margin-right: 3.1rem;
+}
+.navigation__link:link, .navigation__link:visited {
+  color: #323232;
+  text-decoration: none;
+  text-transform: uppercase;
+  display: inline-block;
+}
+.navigation__link:hover, .navigation__link:active {
+  color: #323232;
+}
+.navigation__svg {
+  width: 1rem;
+  height: 1rem;
 }
 
 /*# sourceMappingURL=main.css.map */
