--- a/X-tend_Realty/sass/components/_quick-search.scss
+++ b/X-tend_Realty/sass/components/_quick-search.scss
@@ -1,6 +1,56 @@
 .quick-search {
 	background-color: $color-light;
 	width: 100%;
-	height: 3.8125rem
+	height: 3.8125rem;
+	box-shadow: 0px 1px 1px $color-ultra-light;
 
+	&__text {
+		text-transform: uppercase;
+		color: $color-ultra-light;
+		font-weight: $font-weight-bold;
+		margin-right: 4rem;
+
+		&:link,
+		&:visited {
+			color: $color-ultra-light;
+		}
+
+		&:hover,
+		&:active {
+			color: $color-ultra-light;
+		}
+	}
+
+	&__link {
+		&:link,
+		&:visited {
+			color: $color-ultra-light;
+			text-decoration: none;
+			text-transform: uppercase;
+			display: inline-block;
+		}
+
+		&:hover,
+		&:active {
+			color: $color-ultra-light;
+		}
+	}
+	&__btn {
+		border-radious: 0;
+		font-weight: $font-weight-bold;
+		color: $color-ultra-light;
+		background-color: $color-accent-1;
+		width: 10.375rem;
+		height: 2.56rem
+	}
+
+	&__search {
+		width: 16.5rem;
+		height: 2.56rem;
+		margin-right: 2rem;
+
+		&::placeholder {
+			font-size: 0.875rem;
+		}
+	}
 }
