up again after meetings... contact complete... on to the tab area

--- a/X-tend_Realty/main.scss
+++ b/X-tend_Realty/main.scss
@@ -21,8 +21,4 @@
 @import "sass/components/header";
 @import "sass/components/quick-search";
 @import "sass/components/navigation";
-@import "sass/components/buttons";
-
-
-
-
+@import "sass/components/footer";
