--- a/X-tend_Realty/main.css
+++ b/X-tend_Realty/main.css
@@ -8583,6 +8583,59 @@ h3 {
   height: 22.625rem;
   background-color: #eeeeee;
 }
+.agent__info {
+  margin-top: 5rem;
+}
+.agent__info--name {
+  text-transform: capitalize;
+  font-size: 2.375rem;
+  font-weight: 300;
+  margin: 0 1rem 1rem 0;
+}
+.agent__info--title {
+  color: #aaaaaa;
+  font-size: 0.875rem;
+  margin: 1rem 1rem 1rem 0;
+  text-transform: uppercase;
+}
+.agent__info--btn {
+  font-weight: 700;
+  color: #eeeeee;
+  background-color: #237377;
+  width: 16.44rem;
+  height: 2.56rem;
+}
+.agent__info--social-icons:not(:last-child) {
+  margin: 1.5rem 2.3rem 2.3rem 0;
+}
+.agent__contact {
+  margin-top: 5rem;
+}
+.agent__contact--icon {
+  width: 1.125rem;
+  height: 1.125rem;
+}
+.agent__contact--text {
+  color: #237377;
+  font-size: 1.125rem;
+}
+.agent__contact--phone-number {
+  color: #595959;
+  font-size: 1.125rem;
+  text-decoration: none;
+}
+.agent__contact--phone-number:link, .agent__contact--phone-number:visited {
+  color: #595959;
+  text-decoration: none;
+}
+.agent__contact--phone-number:hover, .agent__contact--phone-number:active {
+  color: #595959;
+}
+
+.tabs {
+  width: 100%;
+  height: 45.25rem;
+}
 
 .header {
   padding: 1rem 1rem 0 1rem;
@@ -8616,7 +8669,6 @@ h3 {
   color: #eeeeee;
 }
 .quick-search__btn {
-  border-radious: 0;
   font-weight: 700;
   color: #eeeeee;
   background-color: #237377;
@@ -8678,6 +8730,13 @@ h3 {
 .navigation__svg {
   width: 1rem;
   height: 1rem;
+}
+
+.footer {
+  width: 100%;
+  height: 9.44rem;
+  background-color: #2399a6;
+  color: #eeeeee;
 }
 
 /*# sourceMappingURL=main.css.map */
