--- a/X-tend_Realty/sass/pages/_about.scss
+++ b/X-tend_Realty/sass/pages/_about.scss
@@ -2,8 +2,78 @@
 	width: 100%;
 	height: 22.625rem;
 	background-color: $color-ultra-light;
+
+	&__img {
+
+	}
+
+	&__info {
+		margin-top: 5rem;
+
+		&--name {
+			text-transform: capitalize;
+			font-size: 2.375rem;
+			font-weight: $font-weight-light;
+			margin: 0 1rem 1rem 0;
+		}
+
+		&--title {
+			color: $color-light;
+			font-size: 0.875rem;
+			margin: 1rem 1rem 1rem 0;
+			text-transform: uppercase;
+		}
+
+		&--btn {
+			font-weight: $font-weight-bold;
+			color: $color-ultra-light;
+			background-color: $color-accent-1;
+			width: 16.44rem;
+			height: 2.56rem
+		}
+
+		&--social-icons {
+
+			&:not(:last-child) {
+				margin: 1.5rem 2.3rem 2.3rem 0;
+			}
+
+		}
+	}
+
+	&__contact {
+		margin-top: 5rem;
+	
+		&--icon {
+			width: 1.125rem;
+			height: 1.125rem;
+		}
+
+		&--text {
+			color: $color-accent-1;
+			font-size: 1.125rem;
+		}
+
+		&--phone-number {
+			color: $color-medium;
+			font-size: 1.125rem;
+			text-decoration: none;
+
+			&:link,
+			&:visited {
+				color: $color-medium;
+				text-decoration: none;
+			}
+
+			&:hover,
+			&:active {
+				color: $color-medium;
+			}
+		}
+	}
 }
 
-.agent-image {
-
+.tabs  {
+	width: 100%;
+	height: 45.25rem;
 }
