--- a/X-tend_Realty/main.scss
+++ b/X-tend_Realty/main.scss
@@ -20,5 +20,6 @@
 
 @import "sass/components/header";
 @import "sass/components/quick-search";
+@import "sass/components/social-icons";
 @import "sass/components/navigation";
 @import "sass/components/footer";
