--- a/X-tend_Realty/sass/abstracts/_variables.scss
+++ b/X-tend_Realty/sass/abstracts/_variables.scss
@@ -3,11 +3,13 @@
 ===============================================>>>>>*/
 //FONTS
 $font-family-sans-serif: "lato", sans-serif;
+$font-size-sm: 0.75rem;
 
 //COLORS
 $color-dark: #323232;
 $color-medium: #595959;
 $color-light: #aaaaaa;
 $color-ultra-light: #eeeeee;
+$color-white: #fffefe;
 $color-accent-1: #237377;
-$color-footer: #2399a6;
+$color-accent-2: #2399a6;
