--- a/X-tend_Realty/sass/pages/_about.scss
+++ b/X-tend_Realty/sass/pages/_about.scss
@@ -1,10 +1,16 @@
+ul {
+	list-style-type: none;
+	padding: 0;
+}
+
 .agent {
 	width: 100%;
 	height: 22.625rem;
 	background-color: $color-ultra-light;
 
 	&__img {
-
+		padding: 0;
+		display: inline-block;
 	}
 
 	&__info {
@@ -26,38 +32,34 @@
 
 		&--btn {
 			font-weight: $font-weight-bold;
-			color: $color-ultra-light;
+			color: $color-white;
 			background-color: $color-accent-1;
 			width: 16.44rem;
 			height: 2.56rem
-		}
-
-		&--social-icons {
-
-			&:not(:last-child) {
-				margin: 1.5rem 2.3rem 2.3rem 0;
-			}
-
 		}
 	}
 
 	&__contact {
 		margin-top: 5rem;
+		display: inline-block;
 	
 		&--icon {
 			width: 1.125rem;
 			height: 1.125rem;
+			display: inline-block;
 		}
 
 		&--text {
 			color: $color-accent-1;
 			font-size: 1.125rem;
+			display: inline-block;
 		}
 
 		&--phone-number {
 			color: $color-medium;
 			font-size: 1.125rem;
 			text-decoration: none;
+			display: inline-block;
 
 			&:link,
 			&:visited {
@@ -75,5 +77,85 @@
 
 .tabs  {
 	width: 100%;
-	height: 45.25rem;
+	height: 31.625rem;
+
+	&__list {
+		width: 100%;
+		margin-bottom: 0;
+
+		&--area {
+			border-bottom: 2px solid $color-light;
+			display: inline-block;
+			text-align: center;
+		}
+
+		&--active {
+			display: inline-block;
+			text-align: center;
+			border-bottom: 2px solid $color-accent-2;
+			z-index: 9999;
+		}
+	}
+
+	&__link {
+		display: inline-block;
+		font-size: 1.125rem;
+		text-transform: capitalize;
+
+		&--text {
+			color: $color-light;
+			
+			&:link,
+			&:visited {
+				color: $color-light;
+			}
+
+			&:hover,
+			&:active {
+				color: $color-light;
+			}
+		}
+
+		&--active {
+			color: $color-accent-2;
+
+			&:link,
+			&:visited {
+				color: $color-accent-2;
+			}
+
+			&:hover,
+			&:active {
+				color: $color-accent-2;
+			}
+		}
+	}
+
+	&__paragraph {
+		color: $color-medium;
+		font-size: 0.875rem;
+		font-weight: $font-weight-light;
+		line-height: 200%;
+		margin-right: 1rem;
+	}
+	
+	&__geo-info {
+
+		&--list {
+			margin-left: 6rem;
+		}
+
+		&--title {
+			text-transform: uppercase;
+			color: $color-dark;
+			font-size: 1rem;
+		}
+
+		&--desc {
+			color: $color-medium;
+			font-size: 0.875rem;
+			font-weight: $font-weight-light;
+		}
+	}
 }
+
