--- a/X-tend_Realty/sass/components/_footer.scss
+++ b/X-tend_Realty/sass/components/_footer.scss
@@ -1,6 +1,66 @@
 .footer {
 	width: 100%;
 	height: 9.44rem;
-	background-color: $color-footer;
+	background-color: $color-accent-2;
 	color: $color-ultra-light;
+	font-weight: $font-weight-light;
+	display:flex;
+	align-items:center;
+
+	&__contact {	
+		display: block;
+		margin-bottom: 1rem;
+		vertical-align: text-bottom;
+		
+		&--img {
+			display: inline-block;
+			vertical-align: bottom;
+		}
+
+		&--phone-number {
+			color: $color-white;
+			text-decoration: none;
+			margin-left: 0.5rem;
+			display: inline-block;
+
+			&:link,
+			&:visited {
+				color: $color-white;
+				text-decoration: none;
+			}
+
+			&:hover,
+			&:active {
+				color: $color-white;
+			}
+		}
+	}
+
+	&__link {
+		text-decoration: underline;
+		padding-right: 0.875rem;
+
+		&:link,
+		&:visited {
+			color: $color-white;
+			text-decoration: underline;
+			display: inline-block;
+		}
+
+		&:hover,
+		&:active {
+			color: $color-white;
+		}
+
+		&:last-child{
+			padding: 0 0 0.5rem 2rem;
+		}
+	}
+
+	&__copyright {
+		font-size: 0.75rem;
+		margin-bottom: 0.5rem;
+	}
+
+
 }
