--- a/X-tend_Realty/sass/components/_quick-search.scss
+++ b/X-tend_Realty/sass/components/_quick-search.scss
@@ -3,28 +3,41 @@
 	width: 100%;
 	height: 3.8125rem;
 	box-shadow: 0px 1px 1px $color-ultra-light;
+	vertical-align: middle;
+	display: inline-block;
+	
+	&__form {
+		vertical-align: top;
+	}
+
+	&__list {
+		margin-left: 4rem;
+		display: inline-block;
+	}
 
 	&__text {
 		text-transform: uppercase;
-		color: $color-ultra-light;
+		color: $color-white;
 		font-weight: $font-weight-bold;
+		letter-spacing: 1.5px;
 		margin-right: 4rem;
+		display: inline-block;
 
 		&:link,
 		&:visited {
-			color: $color-ultra-light;
+			color: $color-white;
 		}
 
 		&:hover,
 		&:active {
-			color: $color-ultra-light;
+			color: $color-white;
 		}
 	}
 
 	&__link {
 		&:link,
 		&:visited {
-			color: $color-ultra-light;
+			color: $color-white;
 			text-decoration: none;
 			text-transform: uppercase;
 			display: inline-block;
@@ -32,21 +45,23 @@
 
 		&:hover,
 		&:active {
-			color: $color-ultra-light;
+			color: $color-white;
 		}
 	}
 	&__btn {
 		font-weight: $font-weight-bold;
-		color: $color-ultra-light;
+		color: $color-white;
 		background-color: $color-accent-1;
 		width: 10.375rem;
-		height: 2.56rem
+		height: 2.56rem;
+		display: inline-block;
 	}
 
 	&__search {
 		width: 16.5rem;
 		height: 2.56rem;
 		margin-right: 2rem;
+		display: inline-block;
 
 		&::placeholder {
 			font-size: 0.875rem;
