--- a/X-tend_Realty/main.scss
+++ b/X-tend_Realty/main.scss
@@ -3,6 +3,7 @@
 ===============================================>>>>>*/
 
 @import "sass/abstracts/variables";
+@import "sass/abstracts/mixins";
 
 /*=============================================>>>>>
 					BOOTSTRAP
@@ -23,3 +24,5 @@
 @import "sass/components/social-icons";
 @import "sass/components/navigation";
 @import "sass/components/footer";
+
+
