--- a/X-tend_Realty/sass/pages/_about.scss
+++ b/X-tend_Realty/sass/pages/_about.scss
@@ -3,14 +3,32 @@ ul {
 	padding: 0;
 }
 
+article {
+	padding: 0;
+}
+
+
+
 .agent {
 	width: 100%;
 	height: 22.625rem;
 	background-color: $color-ultra-light;
-
+	
+	@include respond(medium) {
+		height:13.25rem;
+	}
+	
+	@include respond(xtra-small) {
+		height: auto;
+	}
+	
 	&__img {
 		padding: 0;
 		display: inline-block;
+
+		@include respond(medium) {
+			margin-right: -1rem;
+		}
 	}
 
 	&__info {
@@ -35,7 +53,24 @@ ul {
 			color: $color-white;
 			background-color: $color-accent-1;
 			width: 16.44rem;
-			height: 2.56rem
+			height: 2.56rem;
+			
+			@include respond(medium) {
+				width: 13.8125rem;
+			}
+
+			@include respond(small) {
+				width: 13.25rem;
+
+			}
+		}
+
+		@include respond(medium) {
+			margin-top: 2rem;
+		}
+
+		@include respond(small) {
+			margin-top: 0.875rem;
 		}
 	}
 
@@ -72,6 +107,22 @@ ul {
 				color: $color-medium;
 			}
 		}
+
+		@include respond(medium) {
+			margin-top: 2rem;
+		}
+
+		@include respond(small) {
+			margin-top: 0.875rem;
+		}
+	}
+	
+	@include respond(medium) {
+		height: 18.313rem;
+	}
+
+	@include respond(small) {
+		height: 13.56rem;
 	}
 }
 
@@ -79,9 +130,21 @@ ul {
 	width: 100%;
 	height: 31.625rem;
 
+	@include respond(small) {
+		height: 35.625rem;
+	}
+
+	@include respond(xtra-small) {
+		height: auto;
+	}
+
 	&__list {
 		width: 100%;
 		margin-bottom: 0;
+		
+		@include respond(small) {
+			display: none;
+		}
 
 		&--area {
 			border-bottom: 2px solid $color-light;
@@ -137,12 +200,20 @@ ul {
 		font-weight: $font-weight-light;
 		line-height: 200%;
 		margin-right: 1rem;
+		
+		@include respond(small) {
+			margin-right: 0;
+		}
 	}
 	
 	&__geo-info {
 
 		&--list {
 			margin-left: 6rem;
+			
+			@include respond(small) {
+				margin-left: 2rem;
+			}
 		}
 
 		&--title {
@@ -158,4 +229,3 @@ ul {
 		}
 	}
 }
-
